--- a/scss/7-components/_menu-toggle.scss
+++ b/scss/7-components/_menu-toggle.scss
@@ -78,7 +78,7 @@ $mobile_toggle-layer-border-radius: 0.4rem !default;
     width: $mobile_toggle-layer-width;
     height: $mobile_toggle-layer-height;
     border-radius: $mobile_toggle-layer-border-radius;
-    background-color: $grey;
+    background-color: $black;
     transition-timing-function: ease;
     transition-duration: 0.15s;
     transition-property: transform;
